--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>pomato</title>
+    <title>บ้านไร่ กัล</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -20,7 +20,7 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- fevicon -->
-    <link rel="icon" href="images/fevicon.png" type="image/gif" />
+    <link rel="icon" href="images/icon.jpg" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
@@ -53,7 +53,7 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="/"><img src="images/logo.png" alt="#"></a>
+                                    <a href="/"><img src="images/newlogo2.png" alt="#"></a>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 offset-md-6">
+                    <!-- <div class="col-md-6 offset-md-6">
                         <div class="location_icon_bottum">
                             <ul>
                                 <li><img src="icon/call.png" />(+71)9876543109</li>
@@ -84,7 +84,7 @@
                                 <li><img src="icon/loc.png" />Location</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -95,9 +95,9 @@
         <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="images/banner.jpg" alt="First slide">
-                    <div class="container">
-                        <div class="carousel-caption relative">
+                    <img class="first-slide" src="images/banner5.png" alt="First slide">
+                    <!-- <div class="container">
+                         <div class="carousel-caption relative">
                             <span>All New Phones </span>
                             <h1>up to 25% Flat Sale</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content
@@ -108,12 +108,12 @@
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul>
-                        </div>
-                    </div>
+                        </div> 
+                    </div> -->
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="images/banner.jpg" alt="Second slide">
-                    <div class="container">
+                    <img class="second-slide" src="images/banner5.png" alt="Second slide">
+                    <!-- <div class="container">
                         <div class="carousel-caption relative">
                             <span>All New Phones </span>
                             <h1>up to 25% Flat Sale</h1>
@@ -126,11 +126,11 @@
                                 <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="images/banner.jpg" alt="Third slide">
-                    <div class="container">
+                    <img class="third-slide" src="images/banner5.png" alt="Third slide">
+                    <!-- <div class="container">
                         <div class="carousel-caption relative">
                             <span>All New Phones </span>
                             <h1>up to 25% Flat Sale</h1>
@@ -143,7 +143,7 @@
                                 <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
@@ -161,13 +161,13 @@
             <div class="row">
                 <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
                     <div class="about_img">
-                        <figure><img src="images/about.png" alt="img" /></figure>
+                        <figure><img src="images/about2.png" alt="img" /></figure>
                     </div>
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
                     <div class="about_box">
                         <h3>About Us</h3>
-                        <span>Our Mobile Shop</span>
+                        <span>Our Skin Shop</span>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the </p>
 
                     </div>
@@ -184,7 +184,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>Our Brand</h2>
+                        <h2>Our Skin</h2>
                     </div>
                 </div>
             </div>
