--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -91,204 +91,10 @@
         <!-- end header inner -->
     </header>
     <!-- end header -->
-    <section class="slider_section">
-        <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="first-slide" src="images/banner5.png" alt="First slide">
-                    <!-- <div class="container">
-                         <div class="carousel-caption relative">
-                            <span>All New Phones </span>
-                            <h1>up to 25% Flat Sale</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content
-                                <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
-                            <a class="buynow" href="#">Buy Now</a>
-                            <ul class="social_icon">
-                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
-                            </ul>
-                        </div> 
-                    </div> -->
-                </div>
-                <div class="carousel-item">
-                    <img class="second-slide" src="images/banner5.png" alt="Second slide">
-                    <!-- <div class="container">
-                        <div class="carousel-caption relative">
-                            <span>All New Phones </span>
-                            <h1>up to 25% Flat Sale</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content
-                                <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
-                            <a class="buynow" href="#">Buy Now</a>
-                            <ul class="social_icon">
-                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
-                            </ul>
-                        </div>
-                    </div> -->
-                </div>
-                <div class="carousel-item">
-                    <img class="third-slide" src="images/banner5.png" alt="Third slide">
-                    <!-- <div class="container">
-                        <div class="carousel-caption relative">
-                            <span>All New Phones </span>
-                            <h1>up to 25% Flat Sale</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content
-                                <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
-                            <a class="buynow" href="#">Buy Now</a>
-                            <ul class="social_icon">
-                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
-                            </ul>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                <i class='fa fa-angle-left'></i>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                <i class='fa fa-angle-right'></i>
-            </a>
-        </div>
-    </section>
 
-    <!-- about -->
-    <div class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
-                    <div class="about_img">
-                        <figure><img src="images/about2.png" alt="img" /></figure>
-                    </div>
-                </div>
-                <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
-                    <div class="about_box">
-                        <h3>About Us</h3>
-                        <span>Our Skin Shop</span>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the </p>
+    <!-- cart -->
 
-                    </div>
-               
-            </div>
-        </div>
-    </div>
-    </div>
-    <!-- end about -->
-
-    <!-- brand -->
-    <div class="brand">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="titlepage">
-                        <h2>Our Skin</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="brand-bg">
-            <div class="container">
-                <div class="row">
-                    <% products.forEach(function(item) {%>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
-                        <div class="brand_box">
-                            <img src="images/<%= item.image %>" alt="img" />
-                            <!-- <h3>$<strong class="red"><%= item.price %></strong></h3> -->
-
-                            <% if(item.sale_price){ %>
-                                <h3>$<strong class="red"><%= item.sale_price %></strong></h3>
-                                <h3 style="text-decoration:line-through;">$<strong class="red"><%= item.price %></strong></h3>
-                                <% } else { %> 
-                                    <h3 style="text-decoration:line-through;">$<strong class="red"><%= item.price %></strong></h3>
-                                <% } %>
-                            <span><%= item.name %></span>
-
-                            <% for (let i = 0; i < item.rating; i++) { %>
-                                <i><img src="images/star.png"/></i>
-                            <% } %>
-                            <form action="/add_to_cart" method="post">
-                                <br>
-                                <input type="hidden" name="id" value="<%= item.id  %>">
-                                <input type="hidden" name="name" value="<%= item.name  %>">
-                                <input type="hidden" name="price" value="<%= item.price  %>">
-                                <input type="hidden" name="sale_price" value="<%= item.sale_price  %>">
-                                <input type="hidden" name="quantity" value="<%= item.quantity  %>">
-                                <input type="hidden" name="image" value="<%= item.image  %>">
-
-                                <input type="submit" value="Add to cart" class="btn btn-primary">
-                            </form>
-
-                        </div>
-                    </div>
-                    <% }) %>
-                
-                    <!-- <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
-                        <div class="brand_box">
-                            <img src="images/2.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
-                        <div class="brand_box">
-                            <img src="images/3.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                        <div class="brand_box">
-                            <img src="images/4.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
-                        <div class="brand_box">
-                            <img src="images/5.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
-                        <div class="brand_box">
-                            <img src="images/6.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div> -->
-                    <div class="col-md-12">
-                        <a class="read-more">See More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- end brand -->
+    
     <!-- clients -->
     <div class="clients">
         <div class="container">
