--- a/views/pages/checkout.ejs
+++ b/views/pages/checkout.ejs
@@ -92,127 +92,55 @@
     </header>
     <!-- end header -->
 
-    <!-- cart -->
-    <section class="cart container mt-2 my-3 py-5">
-        <div class="container_mt-2">
-            <a>Your Cart</a>
+    <!-- checkout -->
+    <section class="my-2 py-3 checkout"></section>
+        <div class="container text-center mt-1 pt-5">
+            <h2>checkout</h2>
+            <hr class="mx-auto">
         </div>
 
-        <table class="pt-5" style="width: 100%">
-            <tr style="color: rgb(255, 255, 255); background-color: black; ">
-                <th >Product</th>
-                <th >Quantity</th>
-                <th style="text-align: right;">Subtotal</th>
-            </tr>
+        <div class="mx-auto container">
+            <form id="checkout-form" method="post" action="/place_order">
 
-            <% cart.forEach(function(item){ %>
-            <tr>
-                <td>
-                    <div class="product-info">
-                        <img src="images/<%= item.image %>" width="15%">
-                    <div>
+                <div class="form-group checkout-small-element">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" id="checkout-name" name="name" placeholder="name">
+                </div>
 
-                     <p><%= item.name %></p>
+                <div class="form-group checkout-small-element">
+                    <label for="name">Email</label>
+                    <input type="text" class="form-control" id="checkout-email" name="email" placeholder="email">
+                </div>
 
-                     <% if(item.sale_price){ %>
+                <div class="form-group checkout-small-element">
+                    <label for="name">Phone</label>
+                    <input type="text" class="form-control" id="checkout-phone" name="phone" placeholder="phone">
+                </div>
 
-                        <small class="prices"><span>$</span><%= item.sale_price %></small>
+                <div class="form-group checkout-small-element">
+                    <label for="name">City</label>
+                    <input type="text" class="form-control" id="checkout-city" name="city" placeholder="city">
+                </div>
 
-                    <%}else{%>
+                <div class="form-group checkout-small-element">
+                    <label for="name">Address</label>
+                    <input type="text" class="form-control" id="checkout-address" name="address" placeholder="address">
+                </div>
 
-                        <small class="prices"><span>$</span><%= item.price %></small>
-                     <% } %>
-                     <br>
-                     
-                     <form  method="post" action="/edit_product_qauntity" class="edit_product_qauntity">
+                <div class="form-group checkout-small-element">
+                    <p>Total amount: $ <%= total %> </p>
+                    <input type="submit" class="btn btn-primary" id="checkout-btn" name="checkout-btn" placeholder="checkout-btn">
+                </div>
+            </form>
 
-                        <input type="hidden" name="id" value="<%=item.id%>">
-                        <input type="submit" value="-" class="edit-btn" name="decrease_product_quantity_btn" style="color: black; background-color: white;" >
-                        <input style="text-align: center;" type="text" class="quantitybox" name="quantity" value="<%= item.quantity %>" readonly >
-                        <input type="submit" value="+" class="edit-btn" name="increase_product_quantity_btn" style="color: rgb(255, 255, 255); background-color: red;">
-                    </form>
-
-
-                    <form method="post" action="/remove_product">
-                        <br>
-                        <button class="btn btn-danger">remove</button>
-                        <input type="hidden" name="id" value="<%=item.id%>" >
-                     </form>
-                    </div>                    
-                    </div>
-                </td> 
-                <td>
-                    
-                </td>
-
-                <td>
-
-                    <% if(item.sale_price){ %>
-                    <span class="product-price">$ <%= item.sale_price * item.quantity %></span>
-                    
-                    <%} else { %>
-                        <span class="product-price">$ <%= item.price * item.quantity %></span>
-                    <% } %>
-                </td>
-            </tr>
-        </table>
-        <% }) %>
-       
-
-        <div class="cart-total">
-            <table>
-                <tr>
-                    <td style="color: rgb(0, 0, 0); font-weight: bold">Total</td>
-                    <td style="text-align:right; color: red; font-weight: bold">$ <%= total %></td>
-                </tr>
-            </table>
         </div>
 
     </section>
-
-    <div class="container">
-        <form method="get" action="/checkout">
-            <button class="btn btn-success">Checkout</button>
-        </form>
-    </div>
-
-    </footer>
-    <!-- end contact -->
-
+    <!-- end checkout -->
     <!-- footer -->
     <br>
     <footer>
         <div id="contact" class="footer">
-            <!-- <div class="container">
-                <div class="row pdn-top-30">
-                    <div class="col-md-12 ">
-                        <div class="footer-box"> -->
-                            <!-- <div class="headinga">
-                                <h3>Address</h3>
-                                <span>Healing Center, 176 W Streetname,New York, NY 10014, US</span>
-                                <p>(+71) 8522369417
-                                    <br>demo@gmail.com</p>
-                            </div> -->
-                            <!-- <ul class="location_icon">
-                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
-
-                            </ul> -->
-                            <!-- <div class="menu-bottom">
-                                <ul class="link">
-                                    <li> <a href="#">Home</a></li>
-                                    <li> <a href="#">About</a></li>
-                                    
-                                    <li> <a href="#">Brand </a></li>
-                                    <li> <a href="#">Specials  </a></li>
-                                    <li> <a href="#"> Contact us</a></li>
-                                </ul>
-                            </div> -->
-                        <!-- </div>
-                    </div>
-                </div>
-            </div> -->
             <div class="copyright">
                 <div class="container">
                     <p>© 2019 All Rights Reserved. Design By<a href="https://templates.beatsnoop.com/"> Free Html Templates</a></p>
