--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>pomato</title>
+    <title>บ้านไร่ กัล</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -20,7 +20,7 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- fevicon -->
-    <link rel="icon" href="images/fevicon.png" type="image/gif" />
+    <link rel="icon" href="images/icon.jpg" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
@@ -53,7 +53,7 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="index.html"><img src="images/logo.png" alt="#"></a>
+                                    <a href="/"><img src="images/newlogo2.png" alt="#"></a>
                                 </div>
                             </div>
                         </div>
@@ -63,11 +63,11 @@
                             <div class="limit-box">
                                 <nav class="main-menu">
                                     <ul class="menu-area-main">
-                                        <li class="active"> <a href="index.html">Home</a> </li>
-                                        <li> <a href="about.html">About</a> </li>
-                                        <li><a href="brand.html">Brand</a></li>
-                                        <li><a href="special.html">Specials</a></li>
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li class="active"> <a href="/">Home</a> </li>
+                                        <li> <a href="/about">About</a> </li>
+                                        <!-- <li><a href="/brand">Brand</a></li> -->
+                                        <!-- <li><a href="/special">Specials</a></li> -->
+                                        <li><a href="/contact">Contact Us</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
                                         </li>
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 offset-md-6">
+                    <!-- <div class="col-md-6 offset-md-6">
                         <div class="location_icon_bottum">
                             <ul>
                                 <li><img src="icon/call.png" />(+71)9876543109</li>
@@ -84,7 +84,7 @@
                                 <li><img src="icon/loc.png" />Location</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -156,12 +156,12 @@
                             </ul>
                             <div class="menu-bottom">
                                 <ul class="link">
-                                    <li> <a href="#">Home</a></li>
-                                    <li> <a href="#">About</a></li>
+                                    <li> <a href="/">Home</a></li>
+                                    <li> <a href="/about">About</a></li>
                                     
-                                    <li> <a href="#">Brand </a></li>
-                                    <li> <a href="#">Specials  </a></li>
-                                    <li> <a href="#"> Contact us</a></li>
+                                    <!-- <li> <a href="#">Brand </a></li> -->
+                                    <!-- <li> <a href="#">Specials  </a></li> -->
+                                    <li> <a href="/contact"> Contact us</a></li>
                                 </ul>
                             </div>
                         </div>
