--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -65,8 +65,8 @@
                                     <ul class="menu-area-main">
                                         <li class="active"> <a href="/">Home</a> </li>
                                         <li> <a href="/about">About</a> </li>
-                                        <li><a href="/brand">Brand</a></li>
-                                        <li><a href="/special">Specials</a></li>
+                                        <!-- <li><a href="/brand">Brand</a></li> -->
+                                        <!-- <li><a href="/special">Specials</a></li> -->
                                         <li><a href="/contact">Contact Us</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
@@ -155,29 +155,6 @@
         </div>
     </section>
 
-    <!-- about -->
-    <div class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
-                    <div class="about_img">
-                        <figure><img src="images/about2.png" alt="img" /></figure>
-                    </div>
-                </div>
-                <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
-                    <div class="about_box">
-                        <h3>About Us</h3>
-                        <span>Our Skin Shop</span>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the </p>
-
-                    </div>
-               
-            </div>
-        </div>
-    </div>
-    </div>
-    <!-- end about -->
-
     <!-- brand -->
     <div class="brand">
         <div class="container">
@@ -202,7 +179,7 @@
                                 <h3>$<strong class="red"><%= item.sale_price %></strong></h3>
                                 <h3 style="text-decoration:line-through;">$<strong class="red"><%= item.price %></strong></h3>
                                 <% } else { %> 
-                                    <h3 style="text-decoration:line-through;">$<strong class="red"><%= item.price %></strong></h3>
+                                    <h3>$<strong class="red"><%= item.price %></strong></h3>
                                 <% } %>
                             <span><%= item.name %></span>
 
@@ -225,62 +202,7 @@
                         </div>
                     </div>
                     <% }) %>
-                
-                    <!-- <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
-                        <div class="brand_box">
-                            <img src="images/2.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
-                        <div class="brand_box">
-                            <img src="images/3.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                        <div class="brand_box">
-                            <img src="images/4.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
-                        <div class="brand_box">
-                            <img src="images/5.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
-                        <div class="brand_box">
-                            <img src="images/6.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div> -->
+    
                     <div class="col-md-12">
                         <a class="read-more">See More</a>
                     </div>
@@ -428,12 +350,11 @@
                             </ul>
                             <div class="menu-bottom">
                                 <ul class="link">
-                                    <li> <a href="#">Home</a></li>
-                                    <li> <a href="#">About</a></li>
-                                    
-                                    <li> <a href="#">Brand </a></li>
-                                    <li> <a href="#">Specials  </a></li>
-                                    <li> <a href="#"> Contact us</a></li>
+                                    <li> <a href="/">Home</a></li>
+                                    <li> <a href="/about">About</a></li>
+                                    <!-- <li> <a href="#">Brand </a></li> -->
+                                    <!-- <li> <a href="#">Specials  </a></li> -->
+                                    <li> <a href="/contact"> Contact us</a></li> 
                                 </ul>
                             </div>
                         </div>
